Add Playwright smoke-check script, make CLAUDE.md more concise
Move the Playwright example from an inline snippet in CLAUDE.md into a real,
runnable scripts/playwright-smoke.js (boots the backend jar, polls health,
logs in, screenshots the mounted SPA) — verified working end-to-end. Also
move the H2 sample-data fixture's contents/rationale into the SQL file's own
header comment, so CLAUDE.md just points at the file instead of duplicating it.